Fix horizontal scrolling and styles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body > footer {
 body {
     background-color: rgb(151, 182, 218);
     font-family: "Quicksand", sans-serif;
+    overflow-x: hidden;
   }
 
 img.pill {
@@ -54,12 +55,26 @@ span.draggableLetters {
   color: inherit;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 800px) {
+  .letter-box {
+    height: 90px;
+    width: 40px;
+    margin: .2rem;
+    border-radius: 10px;
+    font: large;
+  }
+}
+
+
+
+
+@media only screen and (max-width: 500px) {
   .letter-box {
     height: 70px;
     width: 30px;
     margin: .1rem;
     border-radius: 5px;
+    font: large;
   }
 }
 
@@ -71,6 +86,7 @@ span.draggableLetters {
     width: 30px;
     margin: 0;
     border-radius: 1px;
+    font: large;
   }
 }
 
@@ -84,18 +100,11 @@ span.draggableLetters {
 }
 
 .correct {
-  border: #007f3b 1px solid;
-  background-color: #007f3b;
-  color: white;
-  border: white;
-
+  border: #007f3b 2px solid;
 }
 
 .incorrect {
-  border: red 1px solid;
-  background-color: red;
-  color: white;
-  border: white;
+  border: red 2px solid;
 }
 
 #lives {
@@ -138,7 +147,7 @@ button {
 }
 
 button:hover {
-  background-color: rgba(42,110,187, 0.5);
+  background-color: rgba(42,110,187, 0.3);
   border:  #2a6ebb 2px solid;
   color: #333;
 }
